--- a/.github/workflows/daily-email.yml
+++ b/.github/workflows/daily-email.yml
@@ -2,19 +2,14 @@ name: Daily Email Push
 on:
   schedule:
     - cron: '0 23 * * *'  # UTC 23:00，北京时间早7:00
-  workflow_dispatch:     # 允许手动触发 - 这行很重要！
-    inputs:
-      force:
-        description: '强制重新抓取'
-        required: false
-        default: 'false'
+  workflow_dispatch:     # 手动触发
 
 jobs:
   send-email:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
         
       - name: Setup Python
@@ -22,101 +17,121 @@ jobs:
         with:
           python-version: '3.11'
           
-      - name: Install dependencies
+      - name: Install
         run: pip install -r requirements.txt
       
-      - name: Load OPML configuration
+      - name: Load OPML
         env:
           OPML_B64: ${{ secrets.FOLLOW_OPML_B64 }}
         run: |
           if [ -n "$OPML_B64" ]; then
             mkdir -p feeds
-            base64 --decode <<< "$OPML_B64" > feeds/follow.opml 2>/dev/null || echo "Base64解码失败"
+            echo "$OPML_B64" | base64 --decode > feeds/follow.opml 2>/dev/null || true
           fi
       
-      - name: Fetch latest news (optimized)
+      - name: Fetch news
         run: |
-          echo "开始抓取最新新闻..."
           if [ -f feeds/follow.opml ]; then
-            python scripts/update_news.py --output-dir data --window-hours 24 --rss-opml feeds/follow.opml --timeout 120
+            python scripts/update_news.py --output-dir data --window-hours 24 --rss-opml feeds/follow.opml --timeout 90
           else
-            python scripts/update_news.py --output-dir data --window-hours 24 --timeout 120
+            python scripts/update_news.py --output-dir data --window-hours 24 --timeout 90
           fi
-          echo "抓取完成"
       
-      - name: 发送邮件（超简化版本）(Super Simple Version)
+      - name: Send email (Fallback method)
         env:
           SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
-          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
           RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
         run: |
-          echo "🚀 发送测试邮件..."
+          echo "📧 使用备选方法发送邮件"
           
-          # 创建最简单的Python脚本
-          python3 << 'EOF'
-import os, smtplib, json, sys
+          # 创建可靠的邮件发送脚本
+          cat > /tmp/send_simple.py << 'EOF'
+import os, smtplib, ssl, json, time, sys
 from email.mime.text import MIMEText
 
-# 获取配置
-smtp_server = os.getenv('SMTP_SERVER')
-sender_email = os.getenv('SENDER_EMAIL')
-password = os.getenv('SMTP_PASSWORD')
-receiver_email = os.getenv('RECEIVER_EMAIL')
-
-print(f"使用SMTP服务器: {smtp_server}")
-print(f"发件人: {sender_email}")
-print(f"收件人: {receiver_email}")
-print(f"密码长度: {len(password) if password else 0}")
-
-# 创建邮件内容
-content = """<h2>🤖 AI新闻雷达测试邮件</h2>
-<p>这是一封测试邮件，确认你的邮件配置正常工作！</p>
-<p>现在开始，你将在每天早上7点收到AI行业的最新动态。</p>
-<hr>
-<p><small>时间戳: 在GitHub Actions中生成</small></p>
-"""
-
-msg = MIMEText(content, 'html', 'utf-8')
-msg['Subject'] = '✅ AI新闻雷达: 邮件测试成功'
-msg['From'] = sender_email
-msg['To'] = receiver_email
-
-# 尝试发送
-try:
-    # 尝试STARTTLS (端口587) - 最兼容
-    server = smtplib.SMTP(smtp_server, 587)
-    server.ehlo()
-    server.starttls()
-    server.ehlo()
-    server.login(sender_email, password)
-    server.send_message(msg)
-    server.quit()
-    print("✅ 邮件发送成功 (STARTTLS)")
-    sys.exit(0)
-except Exception as e1:
-    print(f"⚠️ STARTTLS失败: {str(e1)[:80]}")
+def send_test_email():
+    smtp_server = os.getenv('SMTP_SERVER', '').strip()
+    sender_email = os.getenv('SENDER_EMAIL', '').strip()
+    password = os.getenv('SMTP_PASSWORD', '').strip()
+    receiver_email = os.getenv('RECEIVER_EMAIL', '').strip()
+    
+    if not all([smtp_server, sender_email, password, receiver_email]):
+        print("❌ 缺少SMTP配置")
+        return False
+    
+    print(f"使用服务器: {smtp_server}")
+    print(f"发件人: {sender_email}")
+    print(f"收件人: {receiver_email}")
+    
+    # 创建邮件
+    html_content = '''
+    <h2>🤖 AI新闻雷达</h2>
+    <p>测试邮件 - 如果你收到这封邮件，说明系统工作正常！</p>
+    <p>请检查你的收件箱或垃圾箱。</p>
+    '''
+    
+    msg = MIMEText(html_content, 'html', 'utf-8')
+    msg['Subject'] = '✅ AI新闻雷达测试邮件'
+    msg['From'] = sender_email
+    msg['To'] = receiver_email
+    
+    # 方法1: 简单SMTP (最常见)
     try:
-        # 备选: SSL (端口465)
-        import ssl
-        context = ssl.create_default_context()
-        server = smtplib.SMTP_SSL(smtp_server, 465, context=context)
+        print("尝试方法1: STARTTLS (587)")
+        server = smtplib.SMTP(smtp_server, 587, timeout=15)
+        server.ehlo()
+        server.starttls()
+        server.ehlo()
         server.login(sender_email, password)
         server.send_message(msg)
         server.quit()
-        print("✅ 邮件发送成功 (SSL)")
+        print("✅ Method 1 成功")
+        return True
+    except Exception as e:
+        print(f"方法1失败: {str(e)[:50]}")
+    
+    # 方法2: SSL (465)
+    try:
+        print("尝试方法2: SSL (465)")
+        context = ssl.create_default_context()
+        server = smtplib.SMTP_SSL(smtp_server, 465, context=context, timeout=15)
+        server.login(sender_email, password)
+        server.send_message(msg)
+        server.quit()
+        print("✅ Method 2 成功")
+        return True
+    except Exception as e:
+        print(f"方法2失败: {str(e)[:50]}")
+    
+    # 方法3: 无TLS (不推荐，但测试用)
+    try:
+        print("尝试方法3: No TLS (25)")
+        server = smtplib.SMTP(smtp_server, 25, timeout=15)
+        server.login(sender_email, password)
+        server.send_message(msg)
+        server.quit()
+        print("✅ Method 3 成功")
+        return True
+    except Exception as e:
+        print(f"方法3失败: {str(e)[:50]}")
+    
+    return False
+
+if __name__ == "__main__":
+    if send_test_email():
+        print("🎉 邮件发送成功！请检查邮箱。")
         sys.exit(0)
-    except Exception as e2:
-        print(f"❌ SSL也失败: {str(e2)[:80]}")
+    else:
+        print("❌ 所有发送方式失败")
         sys.exit(1)
 EOF
           
+          python /tmp/send_simple.py
+          
           if [ $? -eq 0 ]; then
-            echo "🎉 测试邮件发送成功！请检查你的收件箱。"
+            echo "✅ 邮件已发送"
           else
-            echo "❌ 邮件发送失败，请检查Secrets配置。"
-            echo "常见问题："
-            echo "1. 邮箱密码是否正确（Gmail需要应用专用密码）"
-            echo "2. SMTP服务器地址是否正确"
-            echo "3. 邮箱是否开启了SMTP服务"
+            echo "⚠️ 邮件发送失败"
           fi
